# WaveTask

./: .gitignore  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts
backend/src/executions/: executions.controller.ts  executions.module.ts  executions.service.ts
backend/src/keepers/: keepers.controller.ts  keepers.module.ts  keepers.service.ts
backend/src/tasks/: tasks.controller.ts  tasks.dto.ts  tasks.module.ts  tasks.service.ts
contracts/: Cargo.toml
contracts/execution_engine/: Cargo.toml
contracts/execution_engine/src/: lib.rs
contracts/keeper_registry/: Cargo.toml
contracts/keeper_registry/src/: lib.rs
contracts/reward_pool/: Cargo.toml
contracts/reward_pool/src/: lib.rs
contracts/task_manager/: Cargo.toml
contracts/task_manager/src/: lib.rs
frontend/: .env.example  Dockerfile  next.config.mjs  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/keepers/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/components/: CreateTaskForm.tsx  Nav.tsx  TaskCard.tsx
frontend/src/lib/: api.ts  wallet.tsx
keeper/: .env.example  Dockerfile  package.json  tsconfig.json
keeper/src/: config.ts  index.ts  logger.ts  monitor.ts  stellar.ts
keeper/src/__tests__/: monitor.test.ts
scripts/: deploy-contracts.js
