[workspace]
members = [
    "task_manager",
    "keeper_registry",
    "execution_engine",
    "reward_pool",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
